# airflow-provider-hightouch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOP.md  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  version.py
.circleci/: config.yml
airflow_provider_hightouch/: __init__.py  consts.py  provider.py  provider.yaml  types.py  utils.py  version.py
airflow_provider_hightouch/example_dags/: example_hightouch_trigger_sync.py
airflow_provider_hightouch/hooks/: hightouch.py
airflow_provider_hightouch/operators/: hightouch.py
airflow_provider_hightouch/sensors/: hightouch.py
tests/hooks/: hightouch_hook_test.py  test_hightouch_hook.py
tests/operators/: hightouch_operator_test.py  test_hightouch_operator.py
