[metadata]
name = airflow-provider-hightouch
version = 1.0.0
description = Hightouch Provider for Airflow
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
author = Hightouch
author_email = pedram@hightouch.io
url = https://github.com/hightouchio/airflow-provider-hightouch
project_urls =
    Bug Tracker = https://github.com/hightouchio/airflow-provider-hightouch/issues
cmdclass=
    verify=version:validate_version

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    apache-airflow >= 1.10
tests_requires =
    pytest >= 6.2.3
    requests_mock >= 1.15

[options.entry_points]
apache_airflow_provider=
    provider_info=airflow_provider_hightouch.provider:get_provider_info
